--- a/templates/settings/partials/locations/custom_location_items.html
+++ b/templates/settings/partials/locations/custom_location_items.html
@@ -2,8 +2,8 @@
 {% for custom_location in custom_locations %}
 <div class="flex items-center justify-between p-2 hover:bg-gray-50 dark:hover:bg-gray-800 rounded-lg">
     <div class="flex items-center">
-        <input type="checkbox" id="custom_location-{{ custom_location.id }}" name="custom_locations" value="{{ custom_location.id }}" class="w-4 h-4 text-green-600 bg-gray-100 border-gray-300 rounded focus:ring-green-500 dark:focus:ring-green-600 dark:ring-offset-gray-800 dark:focus:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600" {% if all_selected or custom_location in lead_preference.custom_locations.all and not none_selected %}checked{% endif %}>
-        <label for="custom_location-{{ custom_location.id }}" class="ms-2 text-sm font-medium text-gray-900 dark:text-gray-300">{{ custom_location.location_text }}</label>
+        <input type="checkbox" id="custom-location-{{ custom_location.id }}" name="custom_locations" value="{{ custom_location.id }}" class="w-4 h-4 text-green-600 bg-gray-100 border-gray-300 rounded focus:ring-green-500 dark:focus:ring-green-600 dark:ring-offset-gray-800 dark:focus:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600" {% if all_selected or custom_location in lead_preference.custom_locations.all and not none_selected %}checked{% endif %}>
+        <label for="custom-location-{{ custom_location.id }}" class="ms-2 text-sm font-medium text-gray-900 dark:text-gray-300">{{ custom_location.location_text }}</label>
     </div>
     <span class="bg-gray-100 text-gray-800 text-xs font-medium px-2.5 py-0.5 rounded dark:bg-gray-700 dark:text-gray-300">
         {% if all_selected or custom_location in lead_preference.custom_locations.all and not none_selected %}Selected{% else %}Available{% endif %}
