--- a/templates/settings/partials/locations/province_items.html
+++ b/templates/settings/partials/locations/province_items.html
@@ -2,7 +2,7 @@
 {% for province in provinces %}
 <div class="flex items-center justify-between p-2 hover:bg-gray-50 dark:hover:bg-gray-800 rounded-lg">
     <div class="flex items-center">
-        <input type="checkbox" id="province-{{ province.id }}" name="provinces" value="{{ province.id }}" class="w-4 h-4 text-green-600 bg-gray-100 border-gray-300 rounded focus:ring-green-500 dark:focus:ring-green-600 dark:ring-offset-gray-800 dark:focus:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600" {% if all_selected or province in lead_preference.provinces.all and not none_selected %}checked{% endif %}>
+        <input type="checkbox" id="province-{{ province.id }}" name="provinces" value="{{ province.id }}" class="w-4 h-4 text-green-600 bg-gray-100 border-gray-300 rounded focus:ring-green-500 dark:focus:ring-green-600 dark:ring-offset-gray-800 dark:focus:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600" {% if province in lead_preference.provinces.all %}checked{% endif %}>
         <label for="province-{{ province.id }}" class="ms-2 text-sm font-medium text-gray-900 dark:text-gray-300">{{ province.name }}</label>
     </div>
     <span class="bg-gray-100 text-gray-800 text-xs font-medium px-2.5 py-0.5 rounded dark:bg-gray-700 dark:text-gray-300">
