--- a/templates/leads/components/drawers/request_lead.html
+++ b/templates/leads/components/drawers/request_lead.html
@@ -28,7 +28,7 @@
                     <p class="text-base font-medium text-gray-900 dark:text-white">Use my saved defaults</p>
                 </div>
                 <label class="relative inline-flex items-center cursor-pointer">
-                    <input type="checkbox" name="saved_defaults" class="sr-only peer" checked hx-get="{% url 'leads:get_lead_preferences' %}" hx-target="#form-fields-container" hx-trigger="change">
+                    <input type="checkbox" name="saved_defaults" class="sr-only peer" checked hx-get="{% url 'leads:get_lead_preferences' %}" hx-target="#form-fields-container" hx-trigger="load, change">
                     <div class="relative w-11 h-6 bg-gray-200 rounded-full peer dark:bg-gray-700 peer-focus:ring-4 peer-focus:ring-green-300 dark:peer-focus:ring-green-800 peer-checked:after:translate-x-full rtl:peer-checked:after:-translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-0.5 after:start-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-5 after:w-5 after:transition-all dark:border-gray-600 peer-checked:bg-green-600">
                     </div>
                 </label>
